--- a/samachaarnews-fe/public/index.html
+++ b/samachaarnews-fe/public/index.html
@@ -9,6 +9,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <script
+      src="https://kit.fontawesome.com/yourcode.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Rampart+One&family=Rubik+Moonrocks&family=Sacramento&family=Space+Mono&family=Special+Elite&family=Splash&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
